--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "gitmoji-cli": "^4.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.13.8"
   }
 }
