--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "gitmoji-cli": "^4.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.13.8"
+    "mongoose": "^5.13.8",
+    "morgan": "^1.10.0"
   }
 }
